<resources>
    <string name="app_name">TimeMangement</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="timeTable">Time table</string>
    <string name="today">Today</string>
    <string name="Weekly_data">Analysis</string>
    <string name="daily_data">Daily Log</string>
    <string name="goals">Goals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infoTimeTable">Info</string>
</resources>
